[project]
name = "yxf"
version = "0.5.0"
description = "Convert from XLSForm to YAML and back"
readme = "README.md"
authors = [
    { name = "Jonas Wagner", email = "ltlygwayh@gmail.com" },
]
requires-python = ">=3.7"
keywords = ["xlsform", "xlsx", "odk", "pxform"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "markdown-it-py>=2.0",
    "openpyxl>=3.0",
    "pyxform>=1.8",
    "strictyaml>=1.6",
]

[project.urls]
homepage = "https://github.com/Sjlver/yxf.git"
documentation = "https://github.com/Sjlver/yxf.git"
repository = "https://github.com/Sjlver/yxf.git"

[dependency-groups]
dev = [
    "black",
    "pylint",
    "pytest~=7.0",
]

[project.scripts]
yxf = "yxf.__main__:main"

[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "yxf" = "yxf" }
packages = ["yxf"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=Lib"
