[project]
name = "yxf"
version = "0.5.0"
description = "Convert from XLSForm to YAML and back"
readme = "README.md"
authors = [
    { name = "Jonas Wagner", email = "jonas@purpureus.net" },
]
requires-python = ">=3.9"
keywords = ["xlsform", "xlsx", "odk", "pyxform"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
dependencies = [
    "markdown-it-py>=2.0",
    "openpyxl>=3.0",
    "strictyaml>=1.6",
]

[project.urls]
homepage = "https://github.com/Sjlver/yxf"
documentation = "https://github.com/Sjlver/yxf"
repository = "https://github.com/Sjlver/yxf"
"Bug Tracker" = "https://github.com/Sjlver/yxf/issues"

[dependency-groups]
dev = [
    "black",
    "pylint",
    "pytest>=8.0",
]

[project.scripts]
yxf = "yxf.__main__:main"

[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["yxf"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
