[metadata]
name = yxf
version = 0.1.0
author = Jonas Wagner
author_email = ltlygwayh@gmail.com
description = Convert from XLSForm to YAML and back
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sjlver/yxf
project_urls =
    Bug Tracker = https://github.com/Sjlver/yxf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    yxf = yxf
packages = yxf
python_requires = >=3.6
install_requires =
    grapefruit
    openpyxl~=3.0
    pyxform~=1.8
    strictyaml~=1.6

[options.entry_points]
console_scripts =
    yxf = yxf.__main__:main